--- a/memory.cfg
+++ b/memory.cfg
@@ -6,6 +6,7 @@ MEMORY {
 }
 
 SEGMENTS {
+	BIOS: load = "ROM", type  = ro;
 	HELLO_WORLD: load = "ROM", type = ro;
 	WOZMON: load = "WOZMON", type = ro;
 	RESET_VECTORS: load = "RESET_VECTORS", type = ro;
