Update memory layout

--- a/memory.cfg
+++ b/memory.cfg
@@ -6,8 +6,8 @@ MEMORY {
 }
 
 SEGMENTS {
-	BIOS: load = "ROM", type  = ro;
-	HELLO_WORLD: load = "ROM", type = ro;
+	BIOS: load = "ROM", type  = ro, align = $100;
+	HELLO_WORLD: load = "ROM", type = ro, align = $100;
 	WOZMON: load = "WOZMON", type = ro;
 	RESET_VECTORS: load = "RESET_VECTORS", type = ro;
 }
